Fix horizontal alignment

--- a/packages/preact-tiny-toast/src/index.css
+++ b/packages/preact-tiny-toast/src/index.css
@@ -1,4 +1,4 @@
-#react-tiny-toast-main-container {
+#preact-tiny-toast-main-container {
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
